--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 # Google App Engine generated folder
 appengine-generated/
+
+# Hey! you can just delete or ignore this file or really do anything with it.. Anyways, goodluck with the apps!
